// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput ContainerProps className added to container tag's default classes 1`] = `
<div
  className="input-container classy react"
>
  <input
    aria-describedby={undefined}
    className={undefined}
    id={undefined}
  />
</div>
`;

exports[`TextInput ContainerProps populate the container tag 1`] = `
<div
  className="input-container"
  id="container"
  style={
    Object {
      "margin": "10px",
    }
  }
>
  <input
    aria-describedby={undefined}
    className={undefined}
    id={undefined}
  />
</div>
`;

exports[`TextInput Error errorMessage acts as child prop 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby={undefined}
    className="error"
    id={undefined}
  />
  <p
    className="error-message"
    role="alert"
  >
    Uh oh
  </p>
</div>
`;

exports[`TextInput Error errorProps populate the error tag 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby={undefined}
    className="error"
    id={undefined}
  />
  <p
    className="error-message more classes"
    data-message="hi there"
    id="error-tag"
    role="alert"
  >
    Uh oh
  </p>
</div>
`;

exports[`TextInput Input aria-describedby defaults to underlineProps.id 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby="descriptor"
    className={undefined}
    id={undefined}
  />
</div>
`;

exports[`TextInput Input aria-describedby will accept ariaDescribedby prop as a fallback 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby="secondary"
    className={undefined}
    id={undefined}
  />
</div>
`;

exports[`TextInput Input receives 'error' class when errorMessage prop is truthy 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby={undefined}
    className="error"
    id={undefined}
  />
  <p
    className="error-message"
    role="alert"
  />
</div>
`;

exports[`TextInput Input receives 'error' class when errorMessage prop is truthy 2`] = `
<div
  className="input-container"
>
  <input
    aria-describedby={undefined}
    className="big and fat error"
    id={undefined}
  />
  <p
    className="error-message"
    role="alert"
  >
    Ya dun goofed
  </p>
</div>
`;

exports[`TextInput Input receives 'error' class when errorMessage prop is truthy 3`] = `
<div
  className="input-container"
>
  <input
    aria-describedby={undefined}
    className={undefined}
    id={undefined}
  />
</div>
`;

exports[`TextInput Input receives props by default 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby={undefined}
    className="big and fat"
    data-key="input-key"
    id="my-input"
    style={
      Object {
        "padding": "25px 15px",
      }
    }
  />
</div>
`;

exports[`TextInput Label htmlFor populated by id prop 1`] = `
<div
  className="input-container"
>
  <label
    htmlFor="first-name"
  >
    First Name
  </label>
  <input
    aria-describedby={undefined}
    className={undefined}
    id="first-name"
  />
</div>
`;

exports[`TextInput Label label prop acts as child 1`] = `
<div
  className="input-container"
>
  <label
    htmlFor={undefined}
  >
    Text Input
  </label>
  <input
    aria-describedby={undefined}
    className={undefined}
    id={undefined}
  />
</div>
`;

exports[`TextInput Label labelProps populate the label tag 1`] = `
<div
  className="input-container"
>
  <label
    className="last name label"
    htmlFor={undefined}
    id="my-label"
    style={
      Object {
        "fontSize": "16px",
      }
    }
  >
    Last Name
  </label>
  <input
    aria-describedby={undefined}
    className={undefined}
    id={undefined}
  />
</div>
`;

exports[`TextInput Underline id defaults to underlineProps.id 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby="descriptor"
    className={undefined}
    id={undefined}
  />
  <p
    className="underline"
    id="descriptor"
  >
    More info
  </p>
</div>
`;

exports[`TextInput Underline id will accept ariaDescribedby prop as a fallback 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby="secondary"
    className={undefined}
    id={undefined}
  />
  <p
    className="underline"
    id="secondary"
  >
    Extra info
  </p>
</div>
`;

exports[`TextInput Underline underline acts as child prop 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby={undefined}
    className={undefined}
    id={undefined}
  />
  <p
    className="underline"
    id={undefined}
  >
    More explanation
  </p>
</div>
`;

exports[`TextInput Underline underlineProps populate the underline tag 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby={undefined}
    className={undefined}
    id={undefined}
  />
  <p
    className="underline help explain"
    id={undefined}
    style={
      Object {
        "background": "blue",
      }
    }
  >
    Fill this in because ...
  </p>
</div>
`;

exports[`TextInput default 1`] = `
<div
  className="input-container"
>
  <input
    aria-describedby={undefined}
    className={undefined}
    id={undefined}
  />
</div>
`;
